--- a/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
@@ -37,12 +37,6 @@
       <HintPath>..\packages\Should.1.1.19\lib\Should.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FamilyTests.cs" />
@@ -52,9 +46,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GenogramGenerator.csproj">
-      <Project>{764B27DE-0BF3-439A-905E-058DAFE9D94C}</Project>
-      <Name>GenogramGenerator</Name>
+    <ProjectReference Include="..\GenogramGenerator.Core\GenogramGenerator.Core.csproj">
+      <Project>{D9674A0D-6F85-49BE-B164-6D3BF02FD3F3}</Project>
+      <Name>GenogramGenerator.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
