--- a/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
@@ -34,7 +34,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Family.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relationship.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
