--- a/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
@@ -30,14 +30,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Family.cs" />
+    <Compile Include="Writer\Flattener.cs" />
+    <Compile Include="Writer\FamilyWriter.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relationship.cs" />
+    <Compile Include="Writer\PersonDto.cs" />
+    <Compile Include="Writer\RelationshipDto.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
