--- a/generator/GenogramGenerator/packages/repositories.config
+++ b/generator/GenogramGenerator/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\GenogramGenerator.Core\packages.config" />
   <repository path="..\GenogramGenerator.Tests\packages.config" />
 </repositories>
