AreTheParentsOf extension method neatens things up

--- a/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Family.cs" />
+    <Compile Include="FamilyExtensions.cs" />
     <Compile Include="Writer\Flattener.cs" />
     <Compile Include="Writer\FamilyWriter.cs" />
     <Compile Include="Person.cs" />
