--- a/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
@@ -43,6 +43,7 @@
     <Compile Include="FamilyTests.cs" />
     <Compile Include="FamilyWriterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestExtentions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
