add birth year and some drawing properties to Person

--- a/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Core/GenogramGenerator.Core.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Relationship.cs" />
     <Compile Include="Writer\PersonDto.cs" />
     <Compile Include="Writer\RelationshipDto.cs" />
+    <Compile Include="Year.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
