--- a/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
@@ -42,6 +42,7 @@
     <Compile Include="FamilyExtensionsTests.cs" />
     <Compile Include="FamilyTests.cs" />
     <Compile Include="FamilyWriterTests.cs" />
+    <Compile Include="PersonTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestExtentions.cs" />
   </ItemGroup>
