--- a/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Tests/GenogramGenerator.Tests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="PersonTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestExtentions.cs" />
+    <Compile Include="YearTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
