--- a/generator/GenogramGenerator/GenogramGenerator.Console/GenogramGenerator.Console.csproj
+++ b/generator/GenogramGenerator/GenogramGenerator.Console/GenogramGenerator.Console.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A2595E60-9687-4046-9794-E6234113666B}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{6984BC0F-CE11-4561-9E09-E167F170E323}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GenogramGenerator.Tests</RootNamespace>
-    <AssemblyName>GenogramGenerator.Tests</AssemblyName>
+    <RootNamespace>GenogramGenerator.Console</RootNamespace>
+    <AssemblyName>geno</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -30,32 +32,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Fixie, Version=0.0.1.70, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Fixie.0.0.1.70\lib\net45\Fixie.dll</HintPath>
-    </Reference>
-    <Reference Include="Should">
-      <HintPath>..\packages\Should.1.1.19\lib\Should.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemoFamily.cs" />
-    <Compile Include="FamilyExtensionsTests.cs" />
-    <Compile Include="FamilyTests.cs" />
-    <Compile Include="FamilyWriterTests.cs" />
-    <Compile Include="PersonTests.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestExtentions.cs" />
-    <Compile Include="YearTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GenogramGenerator.Core\GenogramGenerator.Core.csproj">
       <Project>{D9674A0D-6F85-49BE-B164-6D3BF02FD3F3}</Project>
       <Name>GenogramGenerator.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GenogramGenerator.Tests\GenogramGenerator.Tests.csproj">
+      <Project>{A2595E60-9687-4046-9794-E6234113666B}</Project>
+      <Name>GenogramGenerator.Tests</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
